# nicetime

./: README.md  setup.cfg
src/errcode418.egg-info/: PKG-INFO  SOURCES.txt
src/nicetime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
