[metadata]

name = nicetime
version = 0.0.1
author = Eesha Shetty
author_email = eeshashetty24@gmail.com
description = Your time, but nicer.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eeshashetty/nicetime
project_urls =
    Bug Tracker = https://github.com/eeshashetty/nicetime/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
